Add Completed Calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,37 +9,38 @@
 <body>
 <div class="calcBody">
   <div class="topPart">Kyle Ward's Calculator
+    <div id="storedTotal_ID"></div>
     <div class="screen">0</div>
   </div>
   <div class="bottomPart">
     <div class="row">
-      <div class="calcButton" id="clearAll" onclick="clicked('#clearAll');clearIt()">AC</div>
+      <div class="calcButton" id="clearAll" onclick="clicked('#clearAll');clearIt(true)">AC</div>
       <div class="calcButton" id="invertPositiveNegative" onclick="clicked('#invertPositiveNegative');invert()">+/-</div>
       <div class="calcButton" id="percent" onclick="clicked('#percent');percentage()">%</div>
-      <div class="calcButton calculations" id="divide">÷</div>
+      <div class="calcButton calculations" id="division" onclick="clicked('#division');division()">÷</div>
     </div>
     <div class="row">
       <div class="calcButton buttonNumbers" id="seven" onclick="clicked('#seven');keypad(7)">7</div>
       <div class="calcButton buttonNumbers" id="eight" onclick="clicked('#eight');keypad(8)">8</div>
       <div class="calcButton buttonNumbers" id="nine" onclick="clicked('#nine');keypad(9)">9</div>
-      <div class="calcButton calculations" id="mutiply">×</div>
+      <div class="calcButton calculations" id="multiplication" onclick="clicked('#multiplication');multiplication()">×</div>
     </div>
     <div class="row">
       <div class="calcButton buttonNumbers" id="four" onclick="clicked('#four');keypad(4)">4</div>
       <div class="calcButton buttonNumbers" id="five" onclick="clicked('#five');keypad(5)">5</div>
       <div class="calcButton buttonNumbers" id="six" onclick="clicked('#six');keypad(6)">6</div>
-      <div class="calcButton calculations" id="subtract">−</div>
+      <div class="calcButton calculations" id="subtraction" onclick="clicked('#subtraction');subtraction()">−</div>
     </div>
     <div class="row">
       <div class="calcButton buttonNumbers" id="one" onclick="clicked('#one');keypad(1)">1</div>
       <div class="calcButton buttonNumbers" id="two" onclick="clicked('#two');keypad(2)">2</div>
       <div class="calcButton buttonNumbers" id="three" onclick="clicked('#three');keypad(3)">3</div>
-      <div class="calcButton calculations" id="addition">+</div>
+      <div class="calcButton calculations" id="addition" onclick="clicked('#addition');addition()">+</div>
     </div>
     <div class="row">
       <div class="calcButton_double buttonNumbers" id="double"onclick="clicked('#double');keypad(0)"><div id="zero">0</div></div>
       <div class="calcButton buttonNumbers" id="decimal" onclick="clicked('#decimal');keypad('.')">.</div>
-      <div class="calcButton calculations" id="equals">=</div>
+      <div class="calcButton calculations" id="equals" onclick="clicked('#equals');enterEquals()">=</div>
     </div>
   </div>
 </div>
