--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,33 +14,35 @@
   </div>
   <div class="bottomPart">
     <div class="row">
-      <div class="calcButton" id="clearAll" onclick="clicked('#clearAll');clearIt(true)">AC</div>
-      <div class="calcButton" id="invertPositiveNegative" onclick="clicked('#invertPositiveNegative');invert()">+/-</div>
-      <div class="calcButton" id="percent" onclick="clicked('#percent');percentage()">%</div>
-      <div class="calcButton calculations" id="division" onclick="clicked('#division');division()">÷</div>
+      <div class="calcButton" id="clearAll" onclick="clearIt(true)">AC</div>
+      <div class="calcButton" id="invertPositiveNegative" onclick="invert()">+/-</div>
+      <div class="calcButton" id="percent" onclick="percentage()">%</div>
+      <div class="calcButton calculations" id="division" onclick="division()">÷</div>
     </div>
     <div class="row">
-      <div class="calcButton buttonNumbers" id="seven" onclick="clicked('#seven');keypad(7)">7</div>
-      <div class="calcButton buttonNumbers" id="eight" onclick="clicked('#eight');keypad(8)">8</div>
-      <div class="calcButton buttonNumbers" id="nine" onclick="clicked('#nine');keypad(9)">9</div>
-      <div class="calcButton calculations" id="multiplication" onclick="clicked('#multiplication');multiplication()">×</div>
+      <div class="calcButton buttonNumbers" id="seven" onclick="keypad(7)">7</div>
+      <div class="calcButton buttonNumbers" id="eight" onclick="keypad(8)">8</div>
+
+      <div class="calcButton buttonNumbers" onclick="keypad(9)">9</div>
+
+      <div class="calcButton calculations" id="multiplication" onclick="multiplication()">×</div>
     </div>
     <div class="row">
-      <div class="calcButton buttonNumbers" id="four" onclick="clicked('#four');keypad(4)">4</div>
-      <div class="calcButton buttonNumbers" id="five" onclick="clicked('#five');keypad(5)">5</div>
-      <div class="calcButton buttonNumbers" id="six" onclick="clicked('#six');keypad(6)">6</div>
-      <div class="calcButton calculations" id="subtraction" onclick="clicked('#subtraction');subtraction()">−</div>
+      <div class="calcButton buttonNumbers" id="four" onclick="keypad(4)">4</div>
+      <div class="calcButton buttonNumbers" id="five" onclick="keypad(5)">5</div>
+      <div class="calcButton buttonNumbers" id="six" onclick="keypad(6)">6</div>
+      <div class="calcButton calculations" id="subtraction" onclick="subtraction()">−</div>
     </div>
     <div class="row">
-      <div class="calcButton buttonNumbers" id="one" onclick="clicked('#one');keypad(1)">1</div>
-      <div class="calcButton buttonNumbers" id="two" onclick="clicked('#two');keypad(2)">2</div>
-      <div class="calcButton buttonNumbers" id="three" onclick="clicked('#three');keypad(3)">3</div>
-      <div class="calcButton calculations" id="addition" onclick="clicked('#addition');addition()">+</div>
+      <div class="calcButton buttonNumbers" id="one" onclick="keypad(1)">1</div>
+      <div class="calcButton buttonNumbers" id="two" onclick="keypad(2)">2</div>
+      <div class="calcButton buttonNumbers" id="three" onclick="keypad(3)">3</div>
+      <div class="calcButton calculations" id="addition" onclick="addition()">+</div>
     </div>
     <div class="row">
-      <div class="calcButton_double buttonNumbers" id="double"onclick="clicked('#double');keypad(0)"><div id="zero">0</div></div>
-      <div class="calcButton buttonNumbers" id="decimal" onclick="clicked('#decimal');keypad('.')">.</div>
-      <div class="calcButton calculations" id="equals" onclick="clicked('#equals');enterEquals()">=</div>
+      <div class="calcButton_double buttonNumbers" id="double"onclick="keypad(0)"><div id="zero">0</div></div>
+      <div class="calcButton buttonNumbers" id="decimal" onclick="keypad('.')">.</div>
+      <div class="calcButton calculations" id="equals" onclick="enterEquals()">=</div>
     </div>
   </div>
 </div>
